--- a/public/keypad.css
+++ b/public/keypad.css
@@ -1,93 +1,98 @@
+/* 키패드 영역 */
+i {
+    pointer-events: none;
+    font-size: 1.5rem;
+}
 
-        /* 키패드 영역 */
-        i {
-            pointer-events: none;
-            font-size: 1.5rem;
-        }
+.key {
+    width: 8rem;
+    height: 4rem;
+    margin: 0.4rem;
+    font-size: 1.8rem;
+    background-color: #3d3f4d;
+    color: #EDEDED;
+    border-radius: 0.5rem;
+    box-shadow:
+        0 1px 1px rgba(0, 0, 0, 0.08),
+        0 2px 2px rgba(0, 0, 0, 0.12),
+        0 4px 4px rgba(0, 0, 0, 0.16),
+        0 8px 8px rgba(0, 0, 0, 0.20);
 
-        .key {
-            width: 8rem;
-            height: 4rem;
-            margin: 0.4rem;
-            font-size: 1.8rem;
-            background-color: #3d3f4d;
-            color: #EDEDED;
-            border-radius: 0.5rem;
-            box-shadow:
-                0 1px 1px rgba(0, 0, 0, 0.08),
-                0 2px 2px rgba(0, 0, 0, 0.12),
-                0 4px 4px rgba(0, 0, 0, 0.16),
-                0 8px 8px rgba(0, 0, 0, 0.20);
+}
 
-        }
+.keypadTitle {
+    color: white;
+    margin-bottom: 2rem;
+    font-size: 2.4rem;
+}
 
-        .check {
-            width: 26.5rem;
-            height: 4.5rem;
-            font-size: 1.8rem;
-            background-color: #3d3f4d;
-            border-radius: 0.5rem;
-            color: #EDEDED;
-        }
+.check {
+    width: 26.5rem;
+    height: 4.5rem;
+    font-size: 1.8rem;
+    background-color: #3d3f4d;
+    border-radius: 0.5rem;
+    color: #EDEDED;
+}
 
-        .keypadArea {
-            width: 35rem;
-            height: 35rem;
-            text-align: center;
-            padding: 2rem;
-            border-radius: 0.5rem;
-        }
+.keypadArea {
+    width: 35rem;
+    height: 35rem;
+    text-align: center;
+    padding: 2rem;
+    border-radius: 0.5rem;
+}
 
-        .phoneNumber {
-            display: block;
-            width: 26.5rem;
-            height: 4.5rem;
-            margin: 0.4rem;
-            font-size: 1.8rem;
-            /* border: none; */
-            outline: none;
-            background-color: #ffffffcf;
-            color: #EDEDED;
-            border-radius: 0.5rem;
-            margin-left: 2rem;
-            text-align: center;
-            color: #292929;
-            box-shadow:
-                inset 0 1px 1px rgba(49, 49, 49, 0.51),
-                inset 0 2px 2px rgba(53, 53, 53, 0.53);
-        }    
-        
-        .phoneNumber::placeholder {
-            color: rgb(141, 141, 141);
-        }
-        
-        .popupContent {
-            padding-top: 4rem;
-            /* text-align: center; */
-        }
+.phoneNumber {
+    display: block;
+    width: 26.5rem;
+    height: 4.5rem;
+    margin: 0.4rem;
+    font-size: 1.8rem;
+    /* border: none; */
+    outline: none;
+    background-color: #ffffffcf;
+    color: #EDEDED;
+    border-radius: 0.5rem;
+    margin-left: 2rem;
+    text-align: center;
+    color: #292929;
+    box-shadow:
+        inset 0 1px 1px rgba(49, 49, 49, 0.51),
+        inset 0 2px 2px rgba(53, 53, 53, 0.53);
+}
 
-        .keypadArea {
-            width: 35rem;
-            padding: 2rem;
-            height: 33rem;
-            background-color: #323440;
-            align-content: center;
-            margin: auto;
-            padding-left: 2.5rem;
-            color: rgba(0, 0, 0, 0.455);
-            box-shadow: 0 0 10px 5px;
-        }
+.phoneNumber::placeholder {
+    color: rgb(141, 141, 141);
+}
 
-        .nextBtn {
-            width: 8rem;
-            height: 3.5rem;
-            font-size: 1.8rem;
-            background-color: #EDEDED;
-            color: #444444;
-            margin-left: 70rem;
-            box-shadow: 
-                        0 1px 1px rgba(0,0,0,0.08), 
-                        0 2px 2px rgba(0,0,0,0.12), 
-                        0 4px 4px rgba(0,0,0,0.16), 
-                        0 8px 8px rgba(0,0,0,0.20);
-        }
+.popupContent {
+    padding-top: 4rem;
+    /* text-align: center; */
+}
+
+.keypadArea {
+    width: 35rem;
+    padding: 2rem;
+    height: 35rem;
+    background-color: #323440;
+    align-content: center;
+    margin: auto;
+    padding-left: 2.5rem;
+    color: rgba(0, 0, 0, 0.455);
+    box-shadow: 0 0 10px 5px;
+}
+
+.nextBtn {
+    width: 8rem;
+    height: 3.5rem;
+    font-size: 1.8rem;
+    background-color: #EDEDED;
+    color: #444444;
+    margin-left: 70rem;
+    box-shadow:
+        0 1px 1px rgba(0, 0, 0, 0.08),
+        0 2px 2px rgba(0, 0, 0, 0.12),
+        0 4px 4px rgba(0, 0, 0, 0.16),
+        0 8px 8px rgba(0, 0, 0, 0.20);
+}
