--- a/view/content_home.ejs
+++ b/view/content_home.ejs
@@ -22,7 +22,7 @@
                 setTimeout(() => {
                     console.log(`${returnTouchPageSecond - i}초 뒤에 터치 화면으로 돌아갑니다.`);
                     if (i === returnTouchPageSecond - 1) {
-                        window.location.href = "/";
+                        //window.location.href = "/";
                     }
                 }, i * 1000);
             }
