--- a/view/sideBarFrame.ejs
+++ b/view/sideBarFrame.ejs
@@ -14,7 +14,8 @@
         "/select_headcount": "stepSelectTime",
         "/select_seat": "stepSelectSeat",
         "/payment": "stepPayment",
-        "/earn_point": "stepPayment"
+        "/earn_point": "stepPayment",
+        "/point_confirmation": "stepPayment"
     }
 
     const updateSideBar = ( page ) => {
