--- a/view/popup_point_confirmation.ejs
+++ b/view/popup_point_confirmation.ejs
@@ -15,10 +15,7 @@
                             class="inputTextArea"> </span></div>
             </section>
             <section class="pointinputArea">
-                <p class="enterPointsLabel">사용하실 포인트를 입력하세요.</p>
-                <section class="keypadArea">
-                    <%- include("keypadFrame") %>
-                </section>
+                <%- include("keypadFrame", {title: "사용할 포인트를 입력하세요."}) %>
             </section>
         </section>
     </section>
@@ -88,7 +85,9 @@
 
 
     .keypadArea {
-        margin-top: 3rem;
+        /* *********************************************************임시 방편 */
+        margin-top: 6rem;
+        height: 38rem;
     }
 
     /* 포인트를 얼만큼 사용 하실 건가요?  를 넣는 박스*/
