--- a/view/sideBarFrame.ejs
+++ b/view/sideBarFrame.ejs
@@ -15,8 +15,9 @@
         "/select_seat": "stepSelectSeat",
         "/payment": "stepPayment",
         "/earn_point": "stepPayment",
-        "/point_confirmation": "stepPayment"
-    }
+        "/point_confirmation": "stepPayment",
+        "/input_point": "stepPayment"
+    };
 
     const updateSideBar = ( page ) => {
         document.getElementById( page ). classList.replace( "remainingStep", "completedStep" );
