--- a/view/keypadFrame.ejs
+++ b/view/keypadFrame.ejs
@@ -3,7 +3,7 @@
     <p class="keypadTitle">
         <%= title %>
     </p>
-    <input id="phoneNumber" class="phoneNumber" type="text" placeholder="010-1111-2222">
+    <input id="phoneNumber" class="phoneNumber" type="text" placeholder="010-1111-2222" disabled>
     <button class="key" value="1">1</button>
     <button class="key" value="2">2</button>
     <button class="key" value="3">3</button>
