--- a/view/popup_user_verification.ejs
+++ b/view/popup_user_verification.ejs
@@ -28,6 +28,9 @@
         letter-spacing: 1px;
         color: #FFFFFF;
         padding-bottom: 2.5rem;
+
+        text-align: center;
+        padding-top: 2rem;
     }
 
     .keypadArea {
