complete point confirmation

--- a/view/popup_point_confirmation.ejs
+++ b/view/popup_point_confirmation.ejs
@@ -8,7 +8,7 @@
         <section class="allOfPointArea">
             <section class="pointArea">
                 <div class="pointInfoBox howManyPointLeft"><span class="inputArea">보유 포인트: <input type="text"
-                            id="heldPoint" class="inputTextArea" readonly> </span></div>
+                            id="ownedPoint" class="inputTextArea" readonly> </span></div>
                 <div class="pointInfoBox howManyPointUse"><span class="inputArea">사용 포인트: <input type="text"
                             id="usePoint" class="inputTextArea" readonly> </span></div>
                 <div class="pointInfoBox howManyLeft"><span class="inputArea">결제 할 금액: <input type="text"
@@ -30,49 +30,57 @@
     class PointUse {
         constructor(id) {
             this.id = id;
+            this.ownedPoint = 0;
         }
 
-        
-
-        goToNextPage() {
-            const checkBtn = document.getElementById("checkBtn");
-            const usePointArea = document.getElementById("usePoint");
-
-            checkBtn.disabled = !(Number(usePointArea.value) >= 1000);
-
-            checkBtn.addEventListener("click", () => {
-                window.location.href = "/buying";
-            });
+        setPoint( pointData ) {
+            this.ownedPoint = pointData["point"];
         }
 
-        displayMyPoint(pointData) {
-            const heldPointArea = document.getElementById("heldPoint");
-            heldPointArea.value = `${pointData["point"]}`;
+        displayOwnedPoint() {
+            const ownedPointArea = document.getElementById("ownedPoint");
+            ownedPointArea.value = `${this.ownedPoint}`;
         }
 
-        displayUsePoint(pointData) {
+        updatePoint() {
             const keypad = document.getElementById("keypadFrame");
-            const displayNumber = document.getElementById("phoneNumber");
+            const checkBtn = document.getElementById("checkBtn");
 
             const usePointArea = document.getElementById("usePoint");
 
             keypad.addEventListener("click", (e) => {
                 const keyValue = e.target.value;
                 if (keyValue) {
-                    console.log(displayNumber.value)
-                    usePointArea.value = displayNumber.value;
+                    this.displayUsePoint( usePointArea );
 
-                    if (Number(usePointArea.value) > pointData["point"]) {
-                        usePointArea.value = pointData["point"];
-                        displayNumber.value = pointData["point"];
-                    }
+                    checkBtn.disabled = ((Number(usePointArea.value) < 1000));
                 }
             });
         }
 
+        displayUsePoint( usePointArea ) {
+            const displayNumber = document.getElementById("phoneNumber");
+
+            usePointArea.value = displayNumber.value;
+
+            if (Number(usePointArea.value) > this.ownedPoint) {
+                usePointArea.value = this.ownedPoint;
+                displayNumber.value = this.ownedPoint;
+            }
+        }
+        
+        goToNextPage() {
+            const checkBtn = document.getElementById("checkBtn");
+            checkBtn.addEventListener("click", () => {
+                // 보낼 쿼리 데이터는 여기서 처리, usePointArea.value를 기준으로 보내야함.
+                window.location.href = "/buying";
+            });
+        }
+
         runPage(pointData) {
-            this.displayMyPoint(pointData);
-            this.displayUsePoint(pointData);
+            this.setPoint( pointData );
+            this.displayOwnedPoint();
+            this.updatePoint();
             this.goToNextPage();
         }
     }
