--- a/view/popup_ticket_print.ejs
+++ b/view/popup_ticket_print.ejs
@@ -99,10 +99,11 @@
 <style>
     .popupContent {
         text-align: center;
-        padding-top: 3rem;
+        /* padding: 3rem; 이거 안먹음*/ 
     }
 
     .printLabel {
+        padding-top: 3rem;
         font-size: 2rem;
         padding-bottom: 2.5rem;
         color: #FFFFFF;
