시간 선택 팝업 페이지로 변경

--- a/view/sideBarFrame.ejs
+++ b/view/sideBarFrame.ejs
@@ -10,7 +10,7 @@
 
     const pages = {
         "/movie_selection": "stepSelectMovie",
-        "/select_movie_time_popup": "stepSelectTime",
+        "/select_movie_time": "stepSelectTime",
         "/select_headcount": "stepSelectTime",
         "/select_seat": "stepSelectSeat",
         "/payment": "stepPayment",
